tests/NormalTests/paczka1/small_fuzzy/33689017.err
Error in line 8: je7w S873 68,7
Error in line 9: I3mvl A343 50,1
